--- a/work_bgm_club/templates/index.html
+++ b/work_bgm_club/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Django - Auth0 - Vue</title>
+    <title>Work BGM Club</title>
 
 </head>
 <body>
