--- a/work_bgm_club/templates/index.html
+++ b/work_bgm_club/templates/index.html
@@ -1,20 +1,36 @@
 {% load render_bundle from webpack_loader %}
+{% load socialaccount %}
+
 
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Work BGM Club</title>
-    {% render_bundle 'app' 'css' %}
+  <meta charset="UTF-8">
+  <title>Work BGM Club</title>
+  {% render_bundle 'app' 'css' %}
 </head>
+
 <body>
-<div id="app">
-</div>
-{% if debug %}
-    {% render_bundle 'app' %}
-{% else %}
-    {% render_bundle 'manifest' %}
-    {% render_bundle 'vendor' %}
-    {% render_bundle 'app' 'js' %}
-{% endif %}
+  {% providers_media_js %}
+
+  {% if request.user.is_authenticated %}
+    <script>
+    window.currentUser = {{user.pk}}
+    </script>
+    <p>{{request.user.email}} <a href="/accounts/logout/">登出</a></p>
+  {% else %}
+    <a href='{% provider_login_url "facebook" method="oauth2" %}'>FB登入</a>
+  {% endif %}
+
+  <div id="app">
+  </div>
+  {% if debug %}
+  {% render_bundle 'app' %}
+  {% else %}
+  {% render_bundle 'manifest' %}
+  {% render_bundle 'vendor' %}
+  {% render_bundle 'app' 'js' %}
+  {% endif %}
 </body>
+
 </html>
