--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -19,5 +19,14 @@ $secondary: $auxiliary-color;
 $body-bg: #555;
 $body-color: $main-color-light;
 
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: rgba($color: #555, $alpha: 0.9);
+}
+
 // Bootstrap and its default variables
 @import "node_modules/bootstrap/scss/bootstrap";
