--- a/work_bgm_club/templates/allauth/base.html
+++ b/work_bgm_club/templates/allauth/base.html
@@ -56,7 +56,8 @@
       </form>
       <!-- <a href="{% url 'account_logout' %}">登出</a> -->
       {% else %}
-      <a href='{% provider_login_url "facebook" method="js_sdk" %}'>FB登入</a>
+      <a href='{% provider_login_url "facebook" method="oauth2" %}'>FB登入</a>
+      <!-- <a href='{% provider_login_url "facebook" method="js_sdk" %}'>FB登入</a> -->
       <!-- <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">登入</a></li> -->
       <!-- <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">註冊</a></li> -->
       {% endif %}
